--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,10 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.agilhard</groupId>
   <artifactId>jsch</artifactId>
-  <packaging>jar</packaging>
   <version>0.2.0</version>
+
+  <packaging>jar</packaging>
+
   <name>JSch</name>
   <url></url>
   <description>JSch is a pure Java implementation of SSH2</description>
@@ -118,6 +120,20 @@
       </extension>
     </extensions>
   </build>
+
+  <distributionManagement>
+    <repository>
+      <id>${repo.id}</id>
+      <name>Nexus Release Repository</name>
+      <url>${repo.releases.url}</url>
+    </repository>
+    <snapshotRepository>
+      <id>${repo.id}</id>
+      <name>Nexus Snapshot Repository</name>
+      <url>${repo.snapshots.url}</url>
+      <uniqueVersion>false</uniqueVersion>
+    </snapshotRepository>
+  </distributionManagement>
 
   <parent>
     <groupId>org.sonatype.oss</groupId>
